# oww-rs

./: .gitignore  Cargo.toml  README.md
benches/: benchmark.rs
src/: audio.rs  detector.rs  embedding.rs  lib.rs  main.rs  preprocessing.rs  vad.rs
