[package]
name = "oww-rs"
version = "0.1.0"
edition = "2021"
description = "Rust port of OpenWakeWord - lightweight wake word detection"
license = "MIT"

[dependencies]
ort = { version = "2.0.0-rc.11", features = ["ndarray"] }
cpal = "0.15"
ndarray = "0.17"
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
hound = "3.5"

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[[bench]]
name = "benchmark"
harness = false
